--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,16 @@
             <version>2.8.5</version>
         </dependency>
         <!--                                -->
+        <!-- OAuth2 Client -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+<!--        -->
     </dependencies>
 
     <build>
