--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
 spring.data.mongodb.auto-index-creation=true
 server.servlet.context-path=/api/v1
+spring.security.oauth2.client.registration.facebook.client-id=504704323950112
+spring.security.oauth2.client.registration.facebook.client-secret=509e04777e715320758fc9664b674160
+spring.security.oauth2.client.registration.facebook.scope=public_profile,email,user_hometown,user_birthday
+spring.security.oauth2.client.provider.facebook.user-info-uri=https://graph.facebook.com/me?fields=id,name,email,picture.width(1000),birthday,hometown
