--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #spring.data.mongodb.authentication-database=admin
 #spring.data.mongodb.username=root
 #spring.data.mongodb.password=rootpassword
-spring.data.mongodb.database=instagram-clone
+spring.data.mongodb.database=meta
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
 spring.data.mongodb.auto-index-creation=true
