--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 #spring.data.mongodb.authentication-database=admin
 #spring.data.mongodb.username=root
 #spring.data.mongodb.password=rootpassword
-spring.data.mongodb.database=meta
-spring.data.mongodb.port=27017
-spring.data.mongodb.host=localhost
+#spring.data.mongodb.database=meta
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.host=localhost
+spring.data.mongodb.uri=mongodb+srv://admin:admin@cluster0.mt8xt.mongodb.net/meta?retryWrites=true&w=majority
 spring.data.mongodb.auto-index-creation=true
 server.servlet.context-path=/api/v1
 spring.security.oauth2.client.registration.facebook.client-id=504704323950112
