REDIS CONFIG in localhost 6379

--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,23 @@
             <artifactId>mongo-java-driver</artifactId>
             <version>3.12.10</version>
         </dependency>
+
+
+<!--        Redis-->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>3.6.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-redis -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>2.5.1</version>
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
