--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.security.oauth2.client.registration.facebook.client-id=504704323950112
 spring.security.oauth2.client.registration.facebook.client-secret=509e04777e715320758fc9664b674160
 spring.security.oauth2.client.registration.facebook.scope=public_profile,email,user_hometown,user_birthday
 spring.security.oauth2.client.provider.facebook.user-info-uri=https://graph.facebook.com/me?fields=id,name,email,picture.width(1000),birthday,hometown
+
+
+spring.redis.host=localhost
+spring.redis.port=6379
